--- a/config.json
+++ b/config.json
@@ -1,4 +1,9 @@
 {
     "SECRET_KEY": "mysecret",
-    "SQLALCHEMY_DATABASE_URI": "sqlite:///site.db"
+    "SQLALCHEMY_DATABASE_URI": "sqlite:///site.db",
+    "MAIL_SERVER": "smtp.gmail.com",
+    "MAIL_PORT": 587,
+    "MAIL_USERNAME": "roguemastervaleera@gmail.com",
+    "MAIL_USE_TLS": true,
+    "MAIL_USE_SSL": false
 }
